# conflict-prediction-ml

./: .gitignore  .vercelignore  README.md  hello.py  pyproject.toml  vercel.json
.github/workflows/: deploy-vercel.yml  deploy.yml
conflict_climate/: get_Era5.py  get_coverloss.py  get_elevation.py  get_lights.py  get_shapes.py  merge_data.py  upload_toGEE.py
data/extracting/: merge_wri.py  wealth_index.py
data/map/: kepler_map_shell.json
data/merging/: gj_w_rwi_and_era5.py
data/output/: Africa_boundaries.geojson  Africa_centroids_50km.geojson  africa_with_rwi.parquet  elevation_mean.csv  forest_cover_loss.csv  viirs_yearly_lights.csv
data/ucdp/: extracting_africa.ipynb  graphs.ipynb
docs/: full_report.html  index.html  kepler_input.html  kepler_predictions.html  vercel.json
latex/: .gitignore  Makefile  README.md  main.tex  references.bib
milestones/: milestone2.md  milestone3.md  milestone5.md
milestones/milestone_6/: 01_Introduction.ipynb  02_your_data.ipynb  03_models_results.ipynb  04_surprises.ipynb  final_doc.ipynb  (+1 more)
notebooks/: data_exploration_ucdp.ipynb
output/: README.txt  retrain_metrics.json
scripts/: export_final_doc_pdf.sh  export_kepler_predictions.py  generate_input_geojson.py  generate_predictions_geojson.py  retrain_safe.py  sync_docs_report_assets.sh  train_and_save.py
training/: comparison_models_ensemble.ipynb  hw02_AE.ipynb  k_nearestneighbors.ipynb  logistic_regression.ipynb  model_AFC_RF.ipynb  model_AFC_RF_SimpleClass.ipynb  models_AE.ipynb  models_AFC.ipynb  models_PH.ipynb  neural_networks.ipynb  random_forest.ipynb
(+27 files in other folders)
