[project]
name = "project-aeyzaguirre-phernandezpedraz-afcamachob"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.0.1",
    "matplotlib>=3.10.1",
    "plotly>=6.0.1",
    "pyarrow>=19.0.1",
    "ruff>=0.11.6",
]
