[project]
name = "project-aeyzaguirre-phernandezpedraz-afcamachob"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "earthengine-api>=1.5.13",
    "ee>=0.2",
    "geemap>=0.35.3",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "setuptools>=79.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pyarrow>=19.0.1",
    "ruff>=0.11.6",
    "setuptools>=80.0.0",
]
